# Aesora

./: .gitignore  CMakeLists.txt  README.md  README.txt
assets/: icon.rc
include/: crypto_utils.h  decrypt.h  encrypt.h  file_utils.h  terminal_colors.h
installer/: installer.iss
src/: crypto_utils.cpp  decrypt.cpp  encrypt.cpp  file_utils.cpp  main.cpp
tests/: test_aesora.cpp
